--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type="module">
+    window.__vite_plugin_react_preamble_installed__ = true;
+  </script>
   <script type="module" src="http://127.0.0.1:3000/@vite/client"></script>
   <script type="module" src="http://127.0.0.1:3000/src/client/main.tsx"></script>
   <script type="module" src="http://127.0.0.1:3000/src/client/client.ts"></script>
