--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script type="module">
-    window.__vite_plugin_react_preamble_installed__ = true;
+  <script>
+    import RefreshRuntime from "/@react-refresh"
+    RefreshRuntime.injectIntoGlobalHook(window)
+    window.$RefreshReg$ = () => {}
+    window.$RefreshSig$ = () => (type) => type
+    window.__vite_plugin_react_preamble_installed__ = true
   </script>
-  <script type="module" src="http://127.0.0.1:3000/@vite/client"></script>
-  <script type="module" src="http://127.0.0.1:3000/src/client/main.tsx"></script>
-  <script type="module" src="http://127.0.0.1:3000/src/client/client.ts"></script>
-
+  <script type="module" src="src/client/core.js"></script>
   <meta charset="UTF-8"/>
   <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
